# voice-typing

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
scratch/: test_paste.cjs
sidecar/src/: index.ts  nutTypingService.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: LanguageSwitch.tsx  MicButton.tsx  SettingsPanel.tsx  SettingsPopover.tsx  StatusIndicator.tsx  VoiceWidget.tsx
src/hooks/: useGlobalShortcut.ts  useSpeechRecognition.ts  useTypeIntoFocusedApp.ts
src/services/: punctuationService.ts  speech.service.ts  speechRecognitionService.ts  typing.service.ts  window.service.ts
src/stores/: appStore.ts
src/tauri/: commands.ts
src/types/: app.ts
src/utils/: constants.ts  persistence.ts
