[package]
name = "bengali-english-voice-typing"
version = "1.0.0"
description = "Lightweight Windows voice typing widget"
authors = ["Voice Typing"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bengali_english_voice_typing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-shell = "2.2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
